<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E91E1E">

    <Button
        android:id="@+id/white_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/white_button"
        app:layout_constraintBottom_toTopOf="@+id/red_btn"
        app:layout_constraintEnd_toEndOf="@+id/red_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/red_btn"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/red_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/white_btn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/center_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/white_btn"
        app:layout_constraintEnd_toEndOf="@+id/white_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/white_btn"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>